[gd_scene load_steps=4 format=3 uid="uid://cx3yqql81cxuk"]

[ext_resource type="PackedScene" uid="uid://b225e88u4powi" path="res://Screens/GameScreen/Tabs/EquipmentTab/equipment_details.tscn" id="1_eqrmg"]
[ext_resource type="Script" uid="uid://c3qov5b6dhcqk" path="res://Screens/GameScreen/Tabs/EquipmentTab/paged_equipment_details.gd" id="2_43h0h"]
[ext_resource type="Theme" uid="uid://c8cfcbe6ioxu5" path="res://Graphic Elements/Themes/subTab.tres" id="3_43h0h"]

[node name="PagedEquipmentDetails" instance=ExtResource("1_eqrmg")]
script = ExtResource("2_43h0h")

[node name="EncyclopediaTextLabel" parent="VBoxContainer/Text/VBoxContainer/HBoxContainer" index="0"]
wrappingEnabled = false

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/Text/VBoxContainer" index="5"]
layout_mode = 2
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/Text/VBoxContainer/HBoxContainer2" index="0"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="VBoxContainer/Text/VBoxContainer/HBoxContainer2/CenterContainer" index="0"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("3_43h0h")
text = "Equip Option Text"

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer/Text/VBoxContainer/HBoxContainer2" index="1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Discard" type="Button" parent="VBoxContainer/Text/VBoxContainer/HBoxContainer2/CenterContainer2" index="0"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("3_43h0h")
text = "Discard"

[connection signal="pressed" from="VBoxContainer/Text/VBoxContainer/HBoxContainer2/CenterContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Text/VBoxContainer/HBoxContainer2/CenterContainer2/Discard" to="." method="_on_discard_pressed"]
